--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.17.2",
     "fastapi>=0.122.0",
+    "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
 ]
