--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.17.2",
+    "bcrypt>=5.0.0",
     "fastapi>=0.122.0",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
