--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,13 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.17.2",
     "bcrypt>=5.0.0",
+    "celery>=5.6.0",
     "fastapi>=0.122.0",
+    "google-api-python-client>=2.187.0",
+    "google-auth>=2.43.0",
+    "google-auth-httplib2>=0.2.1",
+    "pydantic>=2.12.5",
+    "python-multipart>=0.0.21",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
 ]
