--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "google-api-python-client>=2.187.0",
     "google-auth>=2.43.0",
     "google-auth-httplib2>=0.2.1",
+    "psycopg2>=2.9.11",
     "pydantic>=2.12.5",
+    "python-dotenv>=1.2.1",
     "python-multipart>=0.0.21",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
