--- a/requirements.txt
+++ b/requirements.txt
@@ -31,12 +31,14 @@ packaging==25.0
 prompt-toolkit==3.0.52
 proto-plus==1.26.1
 protobuf==6.33.2
+psycopg2==2.9.11
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pydantic==2.12.5
 pydantic-core==2.41.5
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 python-multipart==0.0.21
 requests==2.32.5
 rsa==4.9.1
