--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,13 @@ services:
   api:
     build: .
     container_name: fastapi_app
-    command: uvicorn app:app --host 0.0.0.0 --port 8000
+    command: uvicorn app:app --host 0.0.0.0 --port 8000 --reload
     env_file:
       - .env
     volumes:
       - .:/app
+    ports : 
+      - "8000:8000"
     depends_on:
       - db
       - rabbitmq
@@ -54,18 +56,6 @@ services:
   redis:
     image: redis:7
     container_name: redis
-    networks:
-      - backend
-
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - api
     networks:
       - backend
 
