--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "google-api-python-client>=2.187.0",
     "google-auth>=2.43.0",
     "google-auth-httplib2>=0.2.1",
+    "google-auth-oauthlib>=1.2.2",
     "psycopg2>=2.9.11",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
