--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ google-api-core==2.28.1
 google-api-python-client==2.187.0
 google-auth==2.43.0
 google-auth-httplib2==0.2.1
+google-auth-oauthlib==1.2.2
 googleapis-common-protos==1.72.0
 greenlet==3.2.4
 h11==0.16.0
@@ -27,6 +28,7 @@ idna==3.11
 kombu==5.6.1
 mako==1.3.10
 markupsafe==3.0.3
+oauthlib==3.3.1
 packaging==25.0
 prompt-toolkit==3.0.52
 proto-plus==1.26.1
@@ -36,11 +38,13 @@ pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pydantic==2.12.5
 pydantic-core==2.41.5
+pyjwt==2.10.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-multipart==0.0.21
 requests==2.32.5
+requests-oauthlib==2.0.0
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
