--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==25.1.0
 alembic==1.17.2
 amqp==5.3.1
 annotated-doc==0.0.4
@@ -25,11 +26,13 @@ greenlet==3.2.4
 h11==0.16.0
 httplib2==0.31.0
 idna==3.11
+iniconfig==2.3.0
 kombu==5.6.1
 mako==1.3.10
 markupsafe==3.0.3
 oauthlib==3.3.1
 packaging==25.0
+pluggy==1.6.0
 prompt-toolkit==3.0.52
 proto-plus==1.26.1
 protobuf==6.33.2
@@ -38,8 +41,10 @@ pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pydantic==2.12.5
 pydantic-core==2.41.5
+pygments==2.19.2
 pyjwt==2.10.1
 pyparsing==3.2.5
+pytest==9.0.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-multipart==0.0.21
